--- a/homepage3.ejs
+++ b/homepage3.ejs
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+/*The part I enjoy the most is line 600-697 since it is about auto refresh on the frontend without further requiring access to the backend*/
+
 <html lang="en">
 <head>
   <title>hompage</title>
